--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,6 +22,13 @@
       "automerge": false,      
       "enabled": true,
       "ignoreUnstable": false
+    },
+    {
+      "matchPackageNames": ["nvidia-container-toolkit"],
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)\$",
+      "automerge": false,
+      "enabled": true,
+      "ignoreUnstable": false
     }
   ],
   "customManagers": [
