--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,7 +25,7 @@
     },
     {
       "matchPackageNames": ["nvidia-container-toolkit"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)\$",
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
       "automerge": false,
       "enabled": true,
       "ignoreUnstable": false
