--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -43,7 +43,7 @@
         "\"renovateTag\":\\s*\"name=(?<packageName>nvidia-container-toolkit), os=azurelinux, release=3\\.0\",\\s*\"latestVersion\":\\s*\"(?<currentValue>[^\"]+)\""
       ],
       "datasourceTemplate": "custom.azurelinux",
-      "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<prerelease>\\d{14})$",
+      "versioningTemplate": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
       "autoReplaceStringTemplate": "\"renovateTag\": \"name={{{packageName}}}, os=azurelinux, release=3.0\",\n          \"latestVersion\": \"{{{newValue}}}\""
     }
   ],
