--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -50,7 +50,7 @@
   "customDatasources": {
     "azurelinux": {
       "defaultRegistryUrlTemplate": "https://packages.microsoft.com/azurelinux/3.0/prod/base/x86_64/Packages/n/",
-      "format": "plain",
+      "format": "html",
       "transformTemplates": [
         "{\"releases\": $map(($index := releases#$i[version=\"Package: {{packageName}}\"].$i; $map($index, function($i) { $replace(releases[$i + 1].version, /^Version:\\s*/, \"v\") })), function($v) { {\"version\": $v} })}"
       ]
